--- a/lms/src/main/resources/application.properties
+++ b/lms/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ntlib
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+
+twilio.account.sid=${TWILIO_ACCOUNT_SID:3rn3r3rnm3n}
+twilio.auth.token=${TWILIO_AUTH_TOKEN:j3brjh3jf34jk}
+twilio.phone.number=${TWILIO_PHONE_NUMBER:+19078654789}
