--- a/lms/src/main/resources/application.properties
+++ b/lms/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
-twilio.account.sid=${TWILIO_ACCOUNT_SID:3rn3r3rnm3n}
-twilio.auth.token=${TWILIO_AUTH_TOKEN:j3brjh3jf34jk}
-twilio.phone.number=${TWILIO_PHONE_NUMBER:+19078654789}
+twilio.account.sid=${TWILIO_ACCOUNT_SID:ACfa8785a36a529358de96cfc365522e1d}
+twilio.auth.token=${TWILIO_AUTH_TOKEN:1f431f283103fc421090e8dc5209c565}
+twilio.phone.number=${TWILIO_PHONE_NUMBER:+14805681477}
